Добавляет дополнительные файлы изображений для футера и вставляет их в вёрстку
Решил сделать отдельными файлами, а не через inline svg, чтобы не засорять разметку.
Подправил цвета в самих svg файлах.

--- a/catalog.html
+++ b/catalog.html
@@ -161,7 +161,7 @@
       <div class="layout-positioner layout-footer-positioner">
         <div class="layout-footer-top-row">
           <a class="site-footer-logo">
-            <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+            <img src="img/device-footer.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
           </a>
           <div class="site-menu site-footer-site-menu">
             <ul class="user-menu">
