--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="site-header layout-positioner">
       <div class="layout-header">
         <a class="site-header-logo">
-          <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+          <img src="img/device-header.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
         </a>
         <div class="layout-header-top-row">
           <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
@@ -76,7 +76,7 @@
       <div class="layout-positioner layout-footer-positioner">
         <div class="layout-footer-top-row">
           <a class="site-footer-logo">
-            <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+            <img src="img/device-footer.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
           </a>
           <div class="site-menu site-footer-site-menu">
             <ul class="user-menu">
