--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <header class="site-header layout-positioner">
       <div class="layout-header">
         <a class="site-header-logo" href="index.html">
-          <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+          <img src="img/device-header.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
         </a>
         <div class="layout-header-top-row">
           <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
