--- a/index.html
+++ b/index.html
@@ -7,103 +7,109 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="index-page">
-    <header class="site-header layout-positioner">
-      <div class="layout-header">
-        <a class="site-header-logo">
-          <img src="img/device-header.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
-        </a>
-        <div class="layout-header-top-row">
-          <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-            <label class="visually-hidden" for="search-field">Поиск по сайту</label>
-            <input class="search-field" id="search-field" type="search" name="q" value="" placeholder="Поиск по сайту">
-            <button class="search-form-button" type="submit">Найти</button>
-          </form>
-          <div class="site-menu site-header-site-menu">
-            <ul class="user-menu">
-              <li class="login-link"><a href="#">Войти</a></li>
-            </ul>
-            <a class="compare" href="#">Сравнить</a>
-            <a class="cart" href="#">Корзина</a>
-          </div>
-        </div>
-        <nav class="main-navigation">
-          <ul class="site-navigation site-header-site-navigation">
-            <li class="catalog-link">
-              <a href="#">Каталог товаров</a>
-              <ul class="catalog-subcategories">
-                <li><a href="#">Виртуальная реальность</a></li>
-                <li><a href="#">Фитнес-браслеты</a></li>
-                <li><a href="#">Квадрокоптеры</a></li>
-                <li><a href="#">Моноподы для селфи</a></li>
-                <li><a href="#">Умные часы</a></li>
-                <li><a href="#">Экшн-камеры</a></li>
+    <header class="site-header">
+      <div class="layout-positioner">
+        <div class="layout-header">
+          <a class="logo site-header-logo">
+            <img src="img/device-header.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+          </a>
+          <div class="layout-header-top-row">
+            <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+              <label class="visually-hidden" for="search-field">Поиск по сайту</label>
+              <input class="search-field" id="search-field" type="search" name="q" value="" placeholder="Поиск по сайту">
+              <button class="search-form-button" type="submit">Найти</button>
+            </form>
+            <div class="site-menu site-header-site-menu">
+              <ul class="user-menu">
+                <li class="login-link"><a href="#">Войти</a></li>
               </ul>
-            </li>
-            <li class="delivery-link"><a href="#">Доставка</a></li>
-            <li class="warranty-link"><a href="#">Гарантия</a></li>
-            <li class="contacts-link"><a href="#">Контакты</a></li>
-          </ul>
-        </nav>
+              <a class="compare" href="#">Сравнить</a>
+              <a class="cart" href="#">Корзина</a>
+            </div>
+          </div>
+          <nav class="main-navigation">
+            <ul class="site-navigation site-header-site-navigation">
+              <li class="catalog-link">
+                <a href="#">Каталог товаров</a>
+                <ul class="catalog-subcategories">
+                  <li><a href="#">Виртуальная реальность</a></li>
+                  <li><a href="#">Фитнес-браслеты</a></li>
+                  <li><a href="#">Квадрокоптеры</a></li>
+                  <li><a href="#">Моноподы для селфи</a></li>
+                  <li><a href="#">Умные часы</a></li>
+                  <li><a href="#">Экшн-камеры</a></li>
+                </ul>
+              </li>
+              <li class="delivery-link"><a href="#">Доставка</a></li>
+              <li class="warranty-link"><a href="#">Гарантия</a></li>
+              <li class="contacts-link"><a href="#">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
-    <main class="layout-positioner">
-      <h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
+    <main>
+      <div class="layout-positioner">
+        <h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
 
-      <!-- Место для блока, который нужно пропустить по текущему заданию (Задание №3) -->
+        <!-- Место для блока, который нужно пропустить по текущему заданию (Задание №3) -->
 
-      <div class="layout-index-columns">
-        <section class="about-us">
-          <h2>О нас</h2>
-          <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-          <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-          <ul class="delivery-services">
-            <li>Деловые Линии</li>
-          	<li>Автотрейдинг</li>
-          	<li>ЖелДорЭкспедиция</li>
-          </ul>
-          <a class="button button-more-about-us" href="#">Подробнее о нас</a>
-        </section>
+        <div class="layout-index-columns">
+          <section class="about-us">
+            <h2>О нас</h2>
+            <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+            <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+            <ul class="delivery-services">
+              <li>Деловые Линии</li>
+            	<li>Автотрейдинг</li>
+            	<li>ЖелДорЭкспедиция</li>
+            </ul>
+            <a class="button button-more-about-us" href="#">Подробнее о нас</a>
+          </section>
 
-        <section class="contacts">
-          <h2>Контакты</h2>
-          <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-          <a href="#"><img src="img/contacts-map.jpg" width="560" height="222" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
-          <a class="button button-support" href="#">Напишите нам</a>
-        </section>
+          <section class="contacts">
+            <h2>Контакты</h2>
+            <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+            <a href="#"><img src="img/contacts-map.jpg" width="560" height="222" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
+            <a class="button button-support" href="#">Напишите нам</a>
+          </section>
+        </div>
       </div>
     </main>
     <footer class="site-footer">
-      <div class="layout-positioner layout-footer-positioner">
-        <div class="layout-footer-top-row">
-          <a class="site-footer-logo">
-            <img src="img/device-footer.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
-          </a>
-          <div class="site-menu site-footer-site-menu">
-            <ul class="user-menu">
-              <li class="login-link"><a href="#">Войти</a></li>
-            </ul>
-            <a class="compare" href="#">Сравнить</a>
-            <a class="cart" href="#">Корзина</a>
+      <div class="layout-positioner">
+        <div class="layout-footer">
+          <div class="layout-footer-top-row">
+            <a class="logo site-footer-logo">
+              <img src="img/device-footer.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+            </a>
+            <div class="site-menu site-footer-site-menu">
+              <ul class="user-menu">
+                <li class="login-link"><a href="#">Войти</a></li>
+              </ul>
+              <a class="compare" href="#">Сравнить</a>
+              <a class="cart" href="#">Корзина</a>
+            </div>
           </div>
-        </div>
 
-        <div class="layout-footer-middle-row">
-          <p class="footer-contacts address">г. Москва, ул. Строителей, 15</p>
-          <p class="footer-contacts phone-number">Тел.: +7 (495) 495-95-95</p>
-          <ul class="site-navigation site-footer-site-navigation">
-            <li class="delivery-link"><a href="#">Доставка</a></li>
-            <li class="warranty-link"><a href="#">Гарантия</a></li>
-            <li class="contacts-link"><a href="#">Контакты</a></li>
-          </ul>
-        </div>
+          <div class="layout-footer-middle-row">
+            <p class="footer-contacts address">г. Москва, ул. Строителей, 15</p>
+            <p class="footer-contacts phone-number">Тел.: +7 (495) 495-95-95</p>
+            <ul class="site-navigation site-footer-site-navigation">
+              <li class="delivery-link"><a href="#">Доставка</a></li>
+              <li class="warranty-link"><a href="#">Гарантия</a></li>
+              <li class="contacts-link"><a href="#">Контакты</a></li>
+            </ul>
+          </div>
 
-        <div class="layout-footer-bottom-row">
-          <ul class="social-media-list">
-            <li class="social-button"><a href="#">Фейсбук</a></li>
-            <li class="social-button"><a href="#">Инстаграм</a></li>
-            <li class="social-button"><a href="#">Твиттер</a></li>
-          </ul>
-          <a class="signature" href="https://htmlacademy.ru/intensive/htmlcss">Учебный проект HTML Academy</a>
+          <div class="layout-footer-bottom-row">
+            <ul class="social-media-list">
+              <li class="social-button social-facebook"><a href="#">Фейсбук</a></li>
+              <li class="social-button social-instagram"><a href="#">Инстаграм</a></li>
+              <li class="social-button social-twitter"><a href="#">Твиттер</a></li>
+            </ul>
+            <a class="signature" href="https://htmlacademy.ru/intensive/htmlcss">Учебный проект HTML Academy</a>
+          </div>
         </div>
       </div>
     </footer>
